leveldb: Adding VLOGs to GetDirectoryEntries.

Adding (possibly temporary) verbose error logs to GetDirectoryEntries
to help identify the source of errors on some clients.

Bug: 766896
Change-Id: Id278838a8277e8a9659e13590044b0c294a740f5
Reviewed-on: https://chromium-review.googlesource.com/710639
Reviewed-by: Joshua Bell <jsbell@chromium.org>
Commit-Queue: Chris Mumford <cmumford@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508009}
Former-commit-id: 19d869ca41dd59b376cc0e3b07c616faeacd2062